name:                b-tree
version:             0.1.2
synopsis:            Immutable disk-based B* trees
description:         Immutable disk-based B* trees
homepage:            http://github.com/bgamari/b-tree
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
copyright:           (c) 2014 Ben Gamari
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:bgamari/b-tree

library
  exposed-modules:     BTree
  other-modules:       BTree.Types,
                       BTree.Merge,
                       BTree.Builder,
                       BTree.Lookup,
                       BTree.Walk,
                       BTree.BinaryFile,
                       BTree.BinaryList,
                       BTree.BuildUnordered

  other-extensions:    DeriveGeneric,
                       FlexibleContexts,
                       TemplateHaskell,
                       UndecidableInstances,
                       StandaloneDeriving,
                       BangPatterns,
                       GeneralizedNewtypeDeriving

  hs-source-dirs:      src
  build-depends:       base >=4.6 && <4.9,
                       mtl >=2.0 && <3.0,
                       pipes >=4.1 && <4.2,
                       pipes-interleave >= 0.1 && <1.0,
                       bytestring >=0.10 && <0.11,
                       binary >=0.7 && <0.8,
                       transformers >=0.3 && <0.5,
                       lens >=3.10 && <4.13,
                       containers >=0.5 && <0.6,
                       vector >=0.10 && <0.12,
                       errors >=2.0 && <2.1,
                       filepath >=1.3 && <1.5,
                       directory >=1.2 && <1.3,
                       mmap >=0.5 && <0.6
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite btree-quickcheck
  type:                exitcode-stdio-1.0
  main-is:             QuickCheck.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <4.9,
                       containers,
                       pipes,
                       binary,
                       b-tree,
                       QuickCheck

benchmark btree-benchmark
  type:                exitcode-stdio-1.0
  main-is:             Benchmark.hs
  hs-source-dirs:      benchmarks
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <4.9,
                       b-tree,
                       pipes,
                       criterion >=0.8 && <2.0
  default-language:    Haskell2010

