name:                b-tree
version:             0.1.3
synopsis:            Immutable disk-based B* trees
description:         Immutable disk-based B* trees
homepage:            http://github.com/bgamari/b-tree
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
copyright:           (c) 2014 Ben Gamari
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:bgamari/b-tree

library
  exposed-modules:     BTree,
                       BTree.BinaryList
  other-modules:       BTree.Types,
                       BTree.Merge,
                       BTree.Builder,
                       BTree.Lookup,
                       BTree.Walk,
                       BTree.BinaryFile,
                       BTree.BuildUnordered

  other-extensions:    DeriveGeneric,
                       FlexibleContexts,
                       TemplateHaskell,
                       UndecidableInstances,
                       StandaloneDeriving,
                       BangPatterns,
                       GeneralizedNewtypeDeriving

  hs-source-dirs:      src
  build-depends:       base >=4.6 && <4.11,
                       mtl >=2.0 && <3.0,
                       pipes >=4.1 && <4.4,
                       pipes-interleave >= 1.0 && <2.2,
                       bytestring >=0.10 && <0.11,
                       binary >=0.8.4 && <0.10,
                       transformers >=0.3 && <0.6,
                       lens >=3.10 && <4.16,
                       containers >=0.5 && <0.6,
                       vector >=0.10 && <0.13,
                       errors >=2.0 && <2.3,
                       exceptions >= 0.8 && < 0.9,
                       filepath >=1.3 && <1.5,
                       directory >=1.2 && <1.4,
                       mmap >=0.5 && <0.6
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite btree-quickcheck
  type:                exitcode-stdio-1.0
  main-is:             QuickCheck.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base,
                       containers,
                       pipes,
                       binary,
                       b-tree,
                       QuickCheck >= 2.8.2,
                       tasty,
                       tasty-quickcheck

benchmark btree-benchmark
  type:                exitcode-stdio-1.0
  main-is:             Benchmark.hs
  hs-source-dirs:      benchmarks
  default-language:    Haskell2010
  build-depends:       base,
                       b-tree,
                       pipes,
                       criterion >=0.8 && <2.0
  default-language:    Haskell2010

